--- a/phar_system/frontpage/front_new.css
+++ b/phar_system/frontpage/front_new.css
@@ -102,7 +102,9 @@ body {
     height: calc(100% - 48px);
     background-color: #b8c6e8;
     border-radius: 20px;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    transition: all 0.8s;
 }
 .card_div > h2 {
     text-align: center;
@@ -115,7 +117,16 @@ body {
 }
 
 .back_div {
-    transform: rotateY(180deg);
+    opacity: 1;
+    z-index: 7;
+}
+.front_div {
+    opacity: 1;
+    z-index: 8;
+}
+.opacity_div {
+    opacity: 0;
+    z-index: 5;
 }
 .filp_btn {
     display: flex;
