--- a/phar_system/medicine_cart/popup_bed_list.css
+++ b/phar_system/medicine_cart/popup_bed_list.css
@@ -70,6 +70,8 @@
     content: "";
     width: calc(100% - 8px);
     height: calc(100% - 8px);
+    top: 0px;
+    left: 0px;
     position: absolute;
     border-radius: 5px;
     border: 4px solid rgb(232, 135, 158);
