--- a/phar_system/medicine_cart/popup_med_list.css
+++ b/phar_system/medicine_cart/popup_med_list.css
@@ -1,5 +1,11 @@
 .popup_med_list_div {
-    width: 600px;
+    width: 92vw;
+    width: 92svw;
+    height: 92vh;
+    height: 92svh;
+    max-width: 800px;
+    display: flex !important;
+    flex-direction: column;
 }
 
 .ppml_header_container {
@@ -8,6 +14,9 @@
     position: relative;
     justify-content: center;
     margin-bottom: 16px;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: center;
 }
 .ppml_h_title {
     padding: 4px 48px;
@@ -16,6 +25,7 @@
     font-weight: 600;
     margin-bottom: 12px;
     background-color: rgb(222, 222, 222);
+    width: 40%;
     color: #000000;
     border-radius: 5px;
 }
@@ -35,10 +45,37 @@
     top: 0px;
     left: 0px;
 }
+.head_sort_radio_container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    gap: 12px;
+    justify-content: space-between;
+}
+.sort_med_input {
+    display: none;
+}
+.sort_med_label {
+    border-radius: 4px;
+    padding: 4px;
+    width: 100%;
+    text-align: center;
+    background-color: #d7d7d7;
+    transition: all 0.2sease-out;
+    border: 1px solid #000;
+    cursor: pointer;
+}
+.head_sort_radio_container input[type="radio"]:checked + label {
+    background-color: #5e5e5e;
+    transition: all 0.2sease-out;
+    color: #ffffff;
+}
 .ppml_footer_container {
     display: flex;
+    width: 100%;
     margin-top: 12px;
     justify-content: space-between;
+    flex-shrink: 0;
 }
 .ppml_search_btn {
     padding-bottom: 5px;
@@ -50,8 +87,11 @@
 }
 .ppml_main_container {
     overflow-y: auto;
-    max-height: 480px;
-    min-height: 480px;
+    min-height: 0px;
+    flex-grow: 1;
+    width: 100%;
+    /* max-height: 480px;
+    min-height: 480px; */
     padding-right: 6px;
 }
 /* 滾動條的寬度 */
@@ -80,7 +120,7 @@
 }
 .ppml_card_info_container {
     display: grid;
-    grid-template-columns: 396px 156px;
+    grid-template-columns: 75% 25%;
     justify-content: space-between;
     margin-bottom: 8px;
 }
@@ -175,6 +215,18 @@
     padding-bottom: 1px;
     font-weight: 600;
 }
+.ppml_bed_card_PRN {
+    top: -6px;
+    left: -4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: #ff9292;
+    border-radius: 10px;
+}
 .ppml_bed_done {
     background-color: #C1EA69;
     color: #000;
@@ -194,11 +246,15 @@
     text-align: center;
     margin: auto;
 }
-
-@media screen and (max-width: 550px) {
-    .popup_med_list_div {
-        width: 360px;
+@media screen and (max-width: 1200px) {
+    .ppml_card_info_container {
+        grid-template-columns: 75% 25%;
     }
+}
+@media screen and (max-width: 600px) {
+    /* .popup_med_list_div {
+        width: 360px;
+    } */
     .ppml_card_info_container {
         display: flex;
         flex-wrap: wrap;
