--- a/phar_system/medicine_cart/allocate.css
+++ b/phar_system/medicine_cart/allocate.css
@@ -149,11 +149,15 @@
     width: 100%;
 }
 .pbm_header_container {
+    position: sticky;
+    top: 0;
+    background-color: white; /* 確保背景色，避免透明影響 */
+    z-index: 6;
+    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); */
     margin-top: 36px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    position: relative;
     width: 100%;
 }
 .pbm_footer_container {
@@ -314,10 +318,24 @@
     font-size: 20px;
     font-weight: 600;
 }
+.med_card_mid_display_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 12px;
+    cursor: pointer;
+}
+.med_card_light_btn_for_bed {
+    margin-bottom: 12px;
+    padding: 4px 20px;
+    background-color: #4CAF50;
+    color: #fff;
+    border-radius: 5px;
+}
 .med_card_qty {
     width: 80px;
     min-width: 80px;
-    margin-right: 12px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
