藥品異動標示

--- a/phar_system/medicine_cart/allocate.css
+++ b/phar_system/medicine_cart/allocate.css
@@ -59,7 +59,8 @@
     /* width: 500px; */
     justify-content: flex-end;
 }
-.pb_list_btn {
+.pb_list_btn,
+.ppmcl_btn {
     position: relative;
 }
 .pb_list_notice {
