--- a/phar_system/requisitions_upload/popup_input_po_num.css
+++ b/phar_system/requisitions_upload/popup_input_po_num.css
@@ -67,7 +67,38 @@
 .ppipn_main_img {
     display: block;
     width: 100%;
-    margin-bottom: 16px;
     aspect-ratio: 4/3;
     object-fit: cover;
+}
+.ppipn_img_container {
+    margin-bottom: 16px;
+}
+.ppipn_img_container,
+.ppui_img_container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+.ppipn_img_zoom_container,
+.ppui_img_zoom_container {
+    position: absolute;
+    gap: 16px;
+    right: 12px;
+    bottom: 0px;
+}
+.ppipn_img_zoom_in,
+.ppipn_img_zoom_out {
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+    padding: 4px;
+    background-color: #c4c4c48a;
+    border-radius: 5px;
+    margin: 8px 0px;
+    transition: all 0.2s ease-in-out;
+}
+.ppipn_img_zoom_in:hover,
+.ppipn_img_zoom_out:hover {
+    background-color: #e9e9e98a;
+    transition: all 0.2s ease-in-out;
 }
