--- a/phar_system/medicine_cart/popup_bed_change.css
+++ b/phar_system/medicine_cart/popup_bed_change.css
@@ -10,7 +10,7 @@
     margin-bottom: 12px;
 }
 .ppbc_h_title {
-    padding: 4px 48px;
+    padding: 8px 24px;
     text-align: center;
     font-size: 18px;
     font-weight: 600;
@@ -18,6 +18,21 @@
     background-color: rgb(222, 222, 222);
     color: #000000;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+}
+.ppbc_h_title_content {
+    padding-left: 12px;
+}
+.ppbc_h_current_cart_select {
+    border-radius: 5px;
+    padding: 2px 6px;
+    border: none;
+    font-size: 16px;
+    width: 140px;
+    text-align: center;
 }
 .ppbc_h_close_btn {
     position: absolute;
