--- a/phar_system/medicine_cart/popup_med_list.css
+++ b/phar_system/medicine_cart/popup_med_list.css
@@ -19,15 +19,29 @@
     align-items: center;
 }
 .ppml_h_title {
-    padding: 4px 48px;
+    padding: 8px 24px;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     margin-bottom: 12px;
     background-color: rgb(222, 222, 222);
-    width: 40%;
     color: #000000;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+}
+.ppml_h_title_content {
+    padding-left: 12px;
+}
+.ppml_h_current_cart_select {
+    border-radius: 5px;
+    padding: 2px 6px;
+    border: none;
+    font-size: 16px;
+    width: 140px;
+    text-align: center;
 }
 .ppml_h_close_btn {
     position: absolute;
