--- a/phar_system/med_balance_old/style.css
+++ b/phar_system/med_balance_old/style.css
@@ -141,12 +141,12 @@
     margin-top: 40px;
     display: grid;
     justify-content: center;
-    grid-template-columns: 40px 100px 340px 100px 100px;
+    grid-template-columns: 40px 100px 340px 100px 100px 100px;
 }
 .table_info_container {
     display: grid;
     justify-content: center;
-    grid-template-columns: 40px 100px 340px 100px 100px;
+    grid-template-columns: 40px 100px 340px 100px 100px 100px;
 }
 .table_th {
     background-color: #595959;
