--- a/phar_system/medicine_cart/popup_med_take.css
+++ b/phar_system/medicine_cart/popup_med_take.css
@@ -1,5 +1,5 @@
 .popup_med_take_div {
-    width: 1000px;
+    width: 720px;
 }
 
 .ppmt_header_container {
@@ -28,9 +28,6 @@
     right: 0px;
 }
 .ppmt_h_cart_name {
-    padding: 0px 10px;
-    font-size: 24px;
-    font-weight: 600;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -42,6 +39,17 @@
     height: 380px;
     overflow-y: auto;
     /* box-shadow: 0px 0px 4px #00000042; */
+}
+
+.ppmt_main_no_data_span {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #da4343;
 }
 .ppmt_footer_container {
     display: flex;
