--- a/phar_system/medicine_cart/allocate.css
+++ b/phar_system/medicine_cart/allocate.css
@@ -538,6 +538,12 @@
     height: 22px;
 }
 
+.dobule_checked_color {
+    background-color: #bce9ff;
+    /* text-decoration: underline; */
+    /* border: 5px solid #000000; */
+}
+
 @media screen and (max-width: 1200px) {
     .p_bed_header {
         flex-direction: column;
