Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/phar_system/medicine_cart/popup_med_list.css
+++ b/phar_system/medicine_cart/popup_med_list.css
@@ -73,6 +73,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 19% 19% 19% 19% 19%;
+    gap: 2;
     justify-content: space-between;
 }
 .head_med_table_filter_line {
