--- a/phar_system/medicine_cart/style.css
+++ b/phar_system/medicine_cart/style.css
@@ -154,10 +154,32 @@
 }
 /* .cart_content {
 
-}
-.cart_option_container {
-
 } */
+/* 整體 scrollbar */
+.cart_option_container::-webkit-scrollbar {
+  width: 4px;              /* 垂直捲軸寬度 */
+  height: 10px;             /* 水平捲軸高度 */
+}
+
+/* 滾動軌道（背景） */
+.cart_option_container::-webkit-scrollbar-track {
+  background-color: #cfcfce;
+  border-radius: 10px;
+}
+
+/* 滾動滑塊 */
+.cart_option_container::-webkit-scrollbar-thumb {
+  background-color: #676767;
+  border-radius: 2px;
+  border: 2px solid #676767; /* 留白邊框讓滑塊更明顯 */
+}
+
+/* 滑塊 hover 時 */
+.cart_option_container::-webkit-scrollbar-thumb:hover {
+  background-color: #676767;
+}
+
+
 .med_table_content {
     width: 130px;
 }
