--- a/phar_system/medicine_cart/popup_physician_notes.css
+++ b/phar_system/medicine_cart/popup_physician_notes.css
@@ -1,5 +1,13 @@
 .popup_physician_notes_div {
-    width: 360px;
+    width: 92vw;
+    width: 92svw;
+    height: 92vh;
+    height: 92svh;
+    max-width: 800px;
+    display: flex !important;
+    justify-content: start !important;
+    justify-content: flex-start !important;
+    flex-direction: column;
 }
 
 .pppns_header_container {
@@ -26,6 +34,20 @@
     width: 36px;
     top: 0px;
     right: 0px;
+}
+.pppns_main_container {
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+}
+.ppp_med_info_container {
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+}
+.pppns_main_content {
+    width: 100%;
+    flex-grow: 1;
 }
 .pppns_footer_container {
     display: flex;
