--- a/phar_system/medicine_cart/popup_prescription_info.css
+++ b/phar_system/medicine_cart/popup_prescription_info.css
@@ -1,5 +1,13 @@
 .popup_prescription_info_div {
-    width: 360px;
+    width: 92vw;
+    width: 92svw;
+    height: 92vh;
+    height: 92svh;
+    max-width: 800px;
+    display: flex !important;
+    justify-content: start !important;
+    justify-content: flex-start !important;
+    flex-direction: column;
 }
 
 .ppp_info_header_container {
@@ -36,8 +44,10 @@
     padding: 16px;
 }
 .ppp_info_main_container {
-    height: 400px;
+    width: 100%;
+    flex-grow: 1;
     overflow-y: auto;
+    padding-right: 6px;
 }
 .ppp_med_info_container {
     display: flex;
