--- a/phar_system/medicine_cart/popup_med_change_list.css
+++ b/phar_system/medicine_cart/popup_med_change_list.css
@@ -76,6 +76,7 @@
     transition: all 0.2s ease-out;
     border: 1px solid #000;
     cursor: pointer;
+    margin-bottom: 12px;
 }
 .ppmcl_head_med_table_filter_container input[type="radio"]:checked + label  {
     background-color: #5e5e5e;
@@ -124,7 +125,7 @@
 }
 .ppmcl_bed_name_info_container {
     display: flex;
-    align-items: end;
+    align-items: center;
 }
 .ppmcl_bed_name_old_bed {
     padding-left: 12px;
