--- a/phar_system/medicine_cart/popup_discharged_list.css
+++ b/phar_system/medicine_cart/popup_discharged_list.css
@@ -163,6 +163,7 @@
     transition: all 0.2s ease-out;
     border: 1px solid #000;
     cursor: pointer;
+    margin-bottom: 12px;
 }
 .ppdl_head_med_table_filter_container input[type="radio"]:checked + label  {
     background-color: #5e5e5e;
