--- a/phar_system/medicine_cart/popup_med_list.css
+++ b/phar_system/medicine_cart/popup_med_list.css
@@ -210,7 +210,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
 }
 .ppml_hr {
     width: 100%;
@@ -294,8 +293,24 @@
 .ppml_light_all_check_btn {
     width: 80%;
     text-align: center;
-    margin: auto;
 }
+
+.ppml_light_on_btn {
+    background-color: rgb(22, 163, 74);
+    border-color: rgb(134, 239, 172);
+}
+.ppml_light_on_btn:hover {
+    background-color: rgb(21, 128, 61);
+    border-color: rgb(134, 239, 172);
+}
+.ppml_disable_card {
+    background-color: #d1d1d1;
+}
+.ppml_bed_card_disable {
+    background-color: #939393;
+    cursor: auto;
+}
+
 @media screen and (max-width: 1200px) {
     .ppml_card_info_container {
         grid-template-columns: 75% 25%;
