--- a/phar_system/medicine_cart/style.css
+++ b/phar_system/medicine_cart/style.css
@@ -22,11 +22,10 @@
 
 .header {
     width: 100%;
-    height: 60px;
     display: flex;
     align-items: center;
     max-width: 1200px;
-    padding: 8px 40px;
+    padding: 20px 40px 8px;
     justify-content: space-between;
     margin: auto;
 }
@@ -35,7 +34,7 @@
     align-items: center;
 }
 .main_div {
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 60px;
 }
 
@@ -44,15 +43,34 @@
     font-weight: 600;
 }
 .header_user {
+    font-size: 14px;
     font-weight: 400;
     padding-left: 8px;
+}
+
+.homepage_link_img {
+    width: 100%;
+    height: 100%;
+}
+.homepage_link {
+    border-radius: 5px;
+    height: 50px;
+    width: 50px;
+    margin-right: 8px;
+    padding: 8px;
+    background-color: white;
+    transition: all 0.2s ease-in;
+}
+.homepage_link:hover {
+    background-color: rgb(221, 221, 221);
+    transition: all 0.2s ease-in;
 }
 
 .light_color_select_div {
     width: 50px;
     height: 50px;
     position: relative;
-    margin-left: 60px;
+    margin-left: 20px;
     margin-top: 4px;
 }
 .current_light_color_display {
@@ -308,9 +326,9 @@
         grid-template-columns: 50% 50%;
     }
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     .header {
-        padding: 12px 20px;
+        padding: 20px 20px 12px;
     }
     .light_color_select_container {
         flex-direction: column;
