--- a/phar_system/medicine_cart/allocate.css
+++ b/phar_system/medicine_cart/allocate.css
@@ -74,11 +74,9 @@
     display: none;
 }
 
-/* .p_bed_info_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
+.p_bed_info_container {
+    width:100%
+}
 .pbic_top {
     width: 100%;
     display: grid;
