Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/medicine_cart/popup_med_pic.css
+++ b/medicine_cart/popup_med_pic.css
@@ -48,7 +48,9 @@
 .ppmp_main_img {
     width: 100%;
     object-fit: cover;
-    padding: 16px;
+}
+.ppmp_main_pic_container {
+    max-width: 600px;
 }
 
 @media screen and (max-width: 550px) {
