--- a/phar_system/medicine_cart/popup_dc_new.css
+++ b/phar_system/medicine_cart/popup_dc_new.css
@@ -1,5 +1,13 @@
 .popup_dc_new_div {
-    width: 1000px;
+    width: 92vw;
+    width: 92svw;
+    min-height: 80vh;
+    min-height: 80svh;
+    max-height: 92vh;
+    max-height: 92svh;
+    max-width: 800px;
+    display: flex !important;
+    flex-direction: column;
 }
 
 .ppdn_header_container {
@@ -37,6 +45,8 @@
 }
 
 .ppdn_main_container {
+    width: 100%;
+    flex-grow: 1;
     margin-bottom: 24px;
     padding: 0px 2px;
     height: 380px;
@@ -44,6 +54,7 @@
     /* box-shadow: 0px 0px 4px #00000042; */
 }
 .ppdn_footer_container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -70,15 +81,19 @@
     border: 1px solid black;
     padding: 4px;
 }
-.td_1,
-.td_2 {
+.dc_td_1 {
     text-align: left;
+    min-width: 152px;
 }
-.td_3 {
-    min-width: 70px;
+.dc_td_2 {
+    text-align: center;
 }
-.td_4,
-.td_5 {
+.dc_td_3 {
+    min-width: 80px;
+    text-align: right;
+}
+.dc_td_4,
+.dc_td_5 {
     min-width: 50px;
 }
 .ppdn_med_th_container {
