--- a/phar_system/medicine_cart/popup_self_operate.css
+++ b/phar_system/medicine_cart/popup_self_operate.css
@@ -1,5 +1,15 @@
 .popup_self_operate_div {
-    width: 1000px;
+    width: 92%;
+    width: 92vw;
+    width: 92svw;
+    max-width: 800px;
+    height: 92%;
+    height: 92vh;
+    height: 92svh;
+    max-height: 92svh;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
 }
 
 .ppso_header_container {
@@ -29,9 +39,13 @@
 }
 
 .ppso_main_container {
+    flex-grow: 1;
     padding: 0px 2px;
+    width: 100%;
     min-height: 400px;
     max-height: 760px;
+    display: flex;
+    flex-direction: column;
     /* box-shadow: 0px 0px 4px #00000042; */
 }
 
@@ -114,13 +128,17 @@
     height: auto;
     transition: 0.3s ease-in-out;
 }
+.ppso_table_container {
+    flex-grow: 1;
+    overflow-y: auto;
+    margin-top: 16px;
+}
 
 .ppso_footer_container {
     display: flex;
     justify-content: space-between;
 }
 .ppso_table {
-    margin-top: 16px;
     width: 100%;
     border-collapse: collapse;
     border-width: 1px;
