--- a/phar_system/medicine_cart/style.css
+++ b/phar_system/medicine_cart/style.css
@@ -93,11 +93,23 @@
     transition: 0.3s ease;
     z-index: 10000;
     border-radius: 5px;
+
+    transform: translateZ(0);         /* 讓容器成為合成層 */
+    -webkit-transform: translateZ(0);
+    will-change: transform;
+    background-color: rgba(0,0,0,0.001); 
 }
 .light_color_select_item {
+    flex: 0 0 50px;
     min-width: 50px;
     height: 50px;
     cursor: pointer;
+
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
+    position: relative;
+    z-index: 1;
 }
 
 .btn {
@@ -326,7 +338,13 @@
         grid-template-columns: 50% 50%;
     }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
+    .header {
+        align-items: start;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 700px) {
     .header {
         padding: 20px 20px 12px;
     }
